# opengl-3d-engine

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE.txt  README.md
demo/: Demo.cpp  Enemy.cpp  Gun.cpp  Level.cpp  Random.cpp  SceneManager.cpp  Scoreboard.cpp  SoundPlayer.cpp  TextManager.cpp  main.cpp
demo/include/: Asset.hpp  Demo.hpp  Enemy.hpp  Gun.hpp  Level.hpp  Random.hpp  SceneManager.hpp  Scoreboard.hpp  SoundPlayer.hpp
docs/: Doxyfile
example/: example.c
resources/shaders/: basic_fragment.glsl  basic_vertex.glsl  fragment.glsl  light_vertex.glsl  picking_fragment.glsl  vertex.glsl
src/: App.cpp  App.hpp  Billboard.cpp  Billboard.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  Controllable.cpp  Controllable.hpp  Cube.cpp  Cube.hpp  Demo.cpp  Demo.hpp  Drawable.hpp  ElementBuffer.cpp  ElementBuffer.hpp  Engine.cpp  Engine.hpp  EngineObject.cpp  EngineObject.hpp  FrameBuffer.cpp  FrameBuffer.hpp  Light.cpp  Light.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  Movable.cpp  Movable.hpp  Plane3D.cpp  Rotatable.cpp  Rotatable.hpp  Scalable.cpp  Scalable.hpp  Shader.cpp  Shader.hpp  Shape.cpp  Shape.hpp  Sphere.cpp  (+16 more)
src/include/: App.hpp  Camera.hpp  Drawable.hpp  ElementBuffer.hpp  Engine.hpp  EngineObject.hpp  FrameBuffer.hpp  Light.hpp  Mesh.hpp  Model.hpp  Plane3D.hpp  Shader.hpp  Text2D.hpp  Texture.hpp  Transformable.hpp  Updatable.hpp  VertexArray.hpp  VertexBuffer.hpp  callbacks.hpp
